made navbar responsive, on desktop can no longer minimize bar and on mobile it now overlays

--- a/frontend/gui/src/components/Canvas.css
+++ b/frontend/gui/src/components/Canvas.css
@@ -1,12 +1,12 @@
-.pts-tester, .quickstart-tester {
-    position: relative;
+/* .pts-tester, .quickstart-tester {
+    position: absolute;
     width: 100vw;
     height: 100vh;
-}
+} */
 
-.leftExample {
-    position: relative;
-}
+/* .leftExample {
+    position: absolute;
+} */
 
 .label {
     display: flex;
@@ -24,11 +24,28 @@
   color: #fff;
 }
 
+.home-container {
+  position: relative;
+  width: inherit;
+  height: 100vh;
+  overflow: hidden
+}
+
 .title {
   color: #000;
-  text-align: center;
   font-size: 4em;
   z-index: 1000;
-  width: 10vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: 0;
+  transform: translate(-50%, -50%);
+  pointer-events: none;
+}
+
+.pts-tester {
+  position: absolute;
+  opacity: 0.95;
+  width: 100%;
   height: 100%;
 }
